<resources>
    <string name="app_name">Smart Rinse</string>
    <string name="logo_smart_rinse">Logo Smart Rinse</string>
    <string name="lorem_ipsum">..........</string>
    <string name="coming_soon">Coming Soon</string>

    <!-- Home - Bottom Navigation String -->
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="chat">Chat</string>
    <string name="setting">Account</string>
    <string name="camera">Camera</string>
    <string name="history">History</string>
    <string name="favorite">Favorite</string>

    <!-- Login - Register -->
    <string name="sr_logo_text">Logo Smart Rinse Text</string>
    <string name="login_account">Login Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="or">- or -</string>
    <string name="login_google">Sign in with Google</string>
    <string name="register_account">Register Account</string>
    <string name="full_name">Full Name</string>
    <string name="register_google">Sign up with Google</string>
    <string name="have_account">Already have an account?</string>
    <string name="rule_email">Enter your email correctly</string>
    <string name="rule_password">Enter your password correctly</string>
    <string name="rule_confpassword">Enter the confirmation password correctly</string>
    <string name="rule_nama">Enter your name</string>

    <!-- Settings -->
    <string name="app_version_text">Application Version</string>
    <string name="report">Report</string>
    <string name="finance">Finance</string>
    <string name="open_business">Open Business</string>
    <string name="item_list">Item List</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="save">Save</string>
    <string name="try_again">Try Again</string>
    <string name="article_title">Article Title</string>
    <string name="article_description">Article Description</string>
    <string name="article_thumbnail">Article Thumbnail</string>
    <string name="article_date">Article Date</string>
    <string name="article_author">Article Author</string>

    <string name="title_version">Application Information</string>
    <string name="dialog_version">App Version: %1$s\n\nThe Smart Rinse App is designed to make it easier for you to determine the best laundry place with machine learning technology.\n\nThank you for using this App.\n</string>
    <string name="title_confirm_logout">Logout Confirmation</string>
    <string name="desc_confirm_logout">Are you sure you want to log out?</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- Home -->
    <string name="laundry_available">Available Laundry</string>
    <string name="laundry_recommended">Recommended Laundry</string>
    <string name="laundry_thumbnail">Laundry Thumbnail</string>
    <string name="laundry_name">Laundry Name</string>
    <string name="laundry_city">Laundry City</string>
    <string name="laundry_time">Laundry Time</string>

    <!-- On Boarding -->
    <string name="title_menu_1">Revolution in Laundry Experience</string>
    <string name="title_menu_2">Fast Workmanship for Your Busy Lifestyle</string>
    <string name="title_menu_3">Experience Friendly and Experienced Service</string>
    <string name="title_menu_4">Discover a Range of Laundry Service Options</string>
    <string name="desc_menu_1">Easily select from a wide range of laundry needs, including wash, dry, fold, iron, and more.</string>
    <string name="desc_menu_2">Say goodbye to long waiting times and hello to quick and reliable laundry services with SmartRinse.</string>
    <string name="desc_menu_3">Our dedicated team of laundry professionals ensures your garments are treated with care and attention to detail.</string>
    <string name="desc_menu_4">Explore a variety of laundry solutions and choose the perfect option that suits your preferences.</string>
    <string name="get_started">Get Started</string>

    <!-- Laundry -->
    <string name="ld_title_laundry">Laundry Indonesia</string>
    <string name="ld_label_service">Services</string>
    <string name="ld_label_review">Reviews</string>
    <string name="ld_content_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis risus sed vulputate odio ut enim blandit volutpat maecenas.</string>
    <string name="ld_work_hours">08:00 – 20:00</string>
    <string name="ld_place">Bandung, Jawa Barat</string>
    <string name="ld_establish">2023</string>
    <string name="ld_average_rating">4.5</string>
    <string name="ld_count_rating">0 Reviews</string>
    <string name="ld_service_name">Service name</string>
    <string name="ld_service_price">Service price</string>
    <string name="ld_service_not_available">Service Not Available</string>
    <string name="ld_review_img_user">Image user</string>
    <string name="ld_review_name_user">Name user</string>
    <string name="ld_review_content">Content</string>
    <string name="ld_review_rating">0</string>
    <string name="ld_review_not_available">Review Not Available</string>

    <string name="ld_loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque pulvinar pellentesque habitant morbi. Purus viverra accumsan in nisl. Purus non enim praesent elementum facilisis leo vel fringilla est. Sapien et ligula ullamcorper malesuada proin libero nunc consequat. Gravida neque convallis a cras. A arcu cursus vitae congue mauris rhoncus. Eget duis at tellus at. Amet porttitor eget dolor morbi. Nec feugiat in fermentum posuere urna nec tincidunt praesent semper. Porttitor eget dolor morbi non arcu risus quis varius quam. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Tincidunt id aliquet risus feugiat in ante. Quam vulputate dignissim suspendisse in est. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget.
    Platea dictumst quisque sagittis purus. Odio ut sem nulla pharetra diam sit amet nisl suscipit. Augue mauris augue neque gravida. Vestibulum lorem sed risus ultricies tristique nulla aliquet enim. Libero volutpat sed cras ornare arcu dui. Ut etiam sit amet nisl purus in mollis nunc sed. Vel pharetra vel turpis nunc eget lorem dolor sed. Sed egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Morbi tristique senectus et netus. Lorem dolor sed viverra ipsum. Accumsan tortor posuere ac ut consequat. Aliquam faucibus purus in massa tempor nec feugiat nisl.
    At tempor commodo ullamcorper a lacus vestibulum. Justo laoreet sit amet cursus sit. Adipiscing elit ut aliquam purus sit amet. Lacus vestibulum sed arcu non odio. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Proin fermentum leo vel orci porta non pulvinar. Sit amet purus gravida quis. Urna nec tincidunt praesent semper. Pellentesque adipiscing commodo elit at imperdiet dui accumsan. Odio euismod lacinia at quis risus sed vulputate. Id neque aliquam vestibulum morbi blandit cursus. Facilisi cras fermentum odio eu.
    Et netus et malesuada fames. Eu lobortis elementum nibh tellus molestie nunc non blandit massa. Risus in hendrerit gravida rutrum quisque non tellus orci. Placerat duis ultricies lacus sed turpis tincidunt. Interdum velit laoreet id donec ultrices tincidunt. Nisl nisi scelerisque eu ultrices vitae auctor eu. Sed arcu non odio euismod. Habitant morbi tristique senectus et netus et malesuada. Faucibus purus in massa tempor nec feugiat nisl. Quam viverra orci sagittis eu volutpat odio facilisis mauris.
    Pretium fusce id velit ut tortor pretium viverra suspendisse. Ut venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Sed euismod nisi porta lorem mollis aliquam. Lobortis mattis aliquam faucibus purus in. Sit amet nisl purus in. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Eget mauris pharetra et ultrices neque ornare aenean euismod. Velit laoreet id donec ultrices tincidunt arcu non. Et magnis dis parturient montes nascetur ridiculus mus mauris. Vitae turpis massa sed elementum tempus. Et leo duis ut diam quam nulla porttitor. Volutpat maecenas volutpat blandit aliquam. Volutpat blandit aliquam etiam erat velit scelerisque in dictum. Lectus urna duis convallis tellus id interdum. Consequat ac felis donec et odio pellentesque diam volutpat. Gravida quis blandit turpis cursus in. Aliquet eget sit amet tellus cras adipiscing. Pharetra sit amet aliquam id diam maecenas ultricies. Placerat in egestas erat imperdiet sed euismod nisi porta.</string>
    <string name="process">Process</string>
    <string name="solution">Solution</string>
    <string name="all_category">All</string>
    <string name="tips">Tips</string>
    <string name="laundry">Laundry</string>
    <string name="business">Business</string>

    <!--  History  -->
    <string name="history_label">Order History</string>
    <string name="history_image">Image History</string>
    <string name="history_idtrx">Id Trx</string>
    <string name="history_date">-</string>
    <string name="history_total">0</string>
    <string name="history_status">-</string>
    <string name="history_sad">You don\'t have an order history</string>

    <!--  Favorite  -->
    <string name="favorite_label">Favorite Laundry</string>
    <string name="favorite_thumbnail">Image Laundry</string>
    <string name="favorite_image">-</string>
    <string name="favorite_name">-</string>
    <string name="favorite_address">-</string>
    <string name="favorite_open">-</string>
    <string name="favorite_close">-</string>
    <string name="favorite_sad">You don\'t have a favorites list</string>

    <!-- Invoice -->
    <string name="invoice_success">Transaction Success</string>
    <string name="invoice_label_order_information">Order Information</string>
    <string name="invoice_label_order_id">ID:</string>
    <string name="invoice_tv_order_id">X-XXXX</string>
    <string name="invoice_label_tgl_trx">Date</string>
    <string name="invoice_tv_tgl_trx">DD-MM-YYYY</string>
    <string name="invoice_label_merchant">Merchant</string>
    <string name="invoice_tv_merchant">-</string>
    <string name="invoice_label_rekening">Account Number</string>
    <string name="invoice_label_bank">Bank Name</string>
    <string name="invoice_tv_rekening_number">-</string>
    <string name="invoice_label_detail_service">Detail Service</string>
    <string name="invoice_item_name">-</string>
    <string name="invoice_item_sub">-</string>
    <string name="invoice_item_total">-</string>
    <string name="invoice_label_total">TOTAL</string>
    <string name="invoice_tv_total_price">-</string>
</resources>