<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_linear"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/sr_logo_text"
        android:src="@drawable/app_name_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/login_layout_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_rounded"
        android:orientation="vertical"
        android:paddingVertical="@dimen/size_32dp"
        android:paddingHorizontal="@dimen/size_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageApp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size_8dp"
            android:fontFamily="@font/poppins_medium"
            android:letterSpacing="0.2"
            android:text="@string/login_account"
            android:textColor="@color/sr_main_black"
            android:textSize="@dimen/text_size_16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="@dimen/size_8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:id="@+id/label_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size_8dp"
            android:fontFamily="@font/poppins_regular"
            android:letterSpacing="0.1"
            android:text="@string/or"
            android:textColor="@color/sr_main_gray" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="@dimen/size_8dp"
            android:text="@string/login_google"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14sp"
            app:icon="@drawable/ic_google_logo"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/label_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.1"
        android:text="@string/not_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_layout_area" />

    <TextView
        android:id="@+id/label_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="0.1"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_no_account" />

</androidx.constraintlayout.widget.ConstraintLayout>