<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_itemhome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/size_16dp"
    android:layout_marginVertical="@dimen/size_8dp"
    app:cardBackgroundColor="@android:color/white">

    <ImageView
        android:id="@+id/iv_reviewer"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:contentDescription="@string/ld_review_img_user"
        android:scaleType="fitXY"
        android:src="@drawable/default_image_rec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_rev_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ld_review_name_user"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_reviewer"
        app:layout_constraintTop_toTopOf="@+id/iv_reviewer" />

    <RatingBar
        android:id="@+id/rating_review"
        style="@android:style/Widget.DeviceDefault.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/sr_main_gray"
        android:contentDescription="@string/app_name"
        android:numStars="5"
        android:progressTint="@color/sr_google_yellow"
        android:rating="4"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_reviewer"
        app:layout_constraintTop_toBottomOf="@id/tv_rev_name" />

    <TextView
        android:id="@+id/tv_rev_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="2"
        android:text="@string/ld_review_rating"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintStart_toEndOf="@id/rating_review"
        app:layout_constraintTop_toBottomOf="@id/tv_rev_name" />


    <TextView
        android:id="@+id/tv_rev_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="5"
        android:text="@string/ld_review_content"
        android:textSize="@dimen/text_size_10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_reviewer" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/size_8dp"
        android:background="@color/sr_white_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rev_content" />

</androidx.constraintlayout.widget.ConstraintLayout>