<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="4dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_itemFavorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">


        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:contentDescription="@string/favorite_thumbnail"
            android:scaleType="fitXY"
            android:src="@drawable/default_image_rec"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_favorite_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/favorite_name"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintStart_toEndOf="@id/iv_favorite"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_favorite_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/favorite_address"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_favorite_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_favorite_name" />

        <TextView
            android:id="@+id/tv_favorite_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/favorite_open"
            android:textSize="@dimen/text_size_10sp"
            app:layout_constraintStart_toStartOf="@id/tv_favorite_address"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite_address" />

        <TextView
            android:id="@+id/tv_favorite_till"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/favorite_open"
            android:textSize="@dimen/text_size_10sp"
            app:layout_constraintStart_toEndOf="@id/tv_favorite_open"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite_address" />

        <TextView
            android:id="@+id/tv_favorite_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/favorite_close"
            android:textSize="@dimen/text_size_10sp"
            app:layout_constraintStart_toEndOf="@id/tv_favorite_till"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>